# http2fifo

./: Cargo.toml  LICENSE  README.md  flake.nix  justfile
.github/workflows/: ci.yml
docs/adr/: 001-implementation-plan.md
nix/: package.nix
src/: config.rs  error.rs  fifo.rs  http.rs  lib.rs  main.rs
tests/: cli.rs  integration.rs  mount.rs
