[package]
name = "http2fifo"
version = "0.1.0"
edition = "2024"

[lib]
name = "http2fifo"
path = "src/lib.rs"

[[bin]]
name = "http2fifo"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["fs"] }
thiserror = "2"
futures-util = "0.3"
bytes = "1"
tokio-util = "0.7"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
